--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Години в секунди</title>
+        <title>Математичні операції</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <link rel="icon" type="image/x-icon" sizes="16x16" href="img/ukraine.png">
     </head>
     <body>
-        <h1>Lesson 2 - Години в секунди</h1>
+        <h1>Homework 2 - Математичні операції</h1>
         <script src="./index.js" defer></script>
     </body>
 </html>
